<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activityBackground"
    tools:context=".LoginActivity">

    <include
        android:id="@+id/incTlbLogin"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">

       <EditText
           android:id="@+id/edtLogin"
           android:hint="@string/edt_login_hint"
           style="@style/editTextStyle"/>

       <EditText
           android:id="@+id/edtPassword"
           android:layout_marginTop="16dp"
           android:layout_gravity="center"
           android:inputType="textPassword"
           android:hint="@string/edt_password_hint"
           style="@style/editTextStyle"/>

       <Button
           android:id="@+id/btnLogin"
           android:layout_marginTop="16dp"
           android:text="@string/btn_login"
           android:onClick="btnLogin_onClicked"
           style="@style/buttonStyle"/>

        <Button
            android:id="@+id/btnForgotPassword"
            android:text="@string/btn_forgot_password"
            android:layout_marginTop="10dp"
            style="@style/buttonStyle"
             />

    </LinearLayout>
</LinearLayout>
