<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activityBackground"
    tools:context="com.example.ives.lpc_v2.Layouts.NovoAtendimentoFragment">

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <CheckBox
            android:id="@+id/chkAtendLudico2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chb_atendimento_ludico"/>

        <TextView
            style="@style/textStyle"
            android:id="@+id/txtDHAtendLudico2"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnDHAtendLudico2"
            android:text="@string/btn_DH_Atendimento_Ludico"
            android:layout_marginTop="16dp"
            style="@style/buttonStyle"/>

        <TextView
            style="@style/textStyle"
            android:layout_marginTop="16dp"
            android:id="@+id/txtDHAtendPsi2"/>

        <Button
            android:id="@+id/btnDHAtendPsi2"
            android:text="@string/btn_DH_Atendimento_PSI"
            android:layout_marginTop="16dp"
            style="@style/buttonStyle"/>

        <LinearLayout
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/btnFinalizarAtendimento"
                android:text="@string/btn_finalizar_atendimento"
                style="@style/buttonStyle"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
