<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activityBackground"
    tools:context="com.example.ives.lpc_v2.Activitys.AgendarActivity">

    <include
        android:id="@+id/incTlbNovoProcesso"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="fill_parent">

        <CheckBox
            android:id="@+id/chkInterBreve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chb_intervencao_breve"/>

        <CheckBox
            android:id="@+id/chkAtendLudico"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chb_atendimento_ludico"/>

        <TextView
            style="@style/textStyle"
            android:id="@+id/txtDHAtendLudico"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnDHAtendLudico"
            android:text=""
            android:layout_marginTop="16dp"
            style="@style/buttonStyle"
            android:onClick="btnDHAtendLudico_onClicked"/>

        <TextView
            style="@style/textStyle"
            android:layout_marginTop="16dp"
            android:id="@+id/txtDHAtendPsi"/>

        <Button
            android:id="@+id/btnDHAtendPsi"
            android:text="@string/btn_DH_Atendimento_PSI"
            android:layout_marginTop="16dp"
            style="@style/buttonStyle"
            android:onClick="btnDHAtendPsi_onClicked"/>

        <TextView
            style="@style/textStyle"
            android:layout_marginTop="16dp"
            android:id="@+id/txtDHAudiFinal"/>

        <Button
            android:id="@+id/btnDHAudiFinal"
            android:text="@string/btn_DH_audiencia_final"
            android:layout_marginTop="16dp"
            style="@style/buttonStyle"
            android:onClick="btnDHAudiFinal_onClicked"/>

        <LinearLayout
            android:gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <Button
                android:id="@+id/btnFinalizarAgendamento"
                android:text="@string/btn_finalizar_agendamento"
                style="@style/buttonStyle"
                android:onClick="btnFinalizarAgendamento_onClicked"
                />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
