<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/activityBackground"
    tools:context="com.example.ives.lpc_v2.Activitys.NovoProcessoActivity">

    <include
        android:id="@+id/incTlbNovoProcesso"
        layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtNumProcesso"
            style="@style/editTextStyle"
            android:hint="@string/edt_num_processo_hint"/>

        <TextView
            style="@style/textStyle"
            android:layout_marginTop="16dp"
            android:text="@string/txt_assunto"/>

        <Spinner
            android:id="@+id/spnAssunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            />

        <LinearLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/linear_layout_border"
            android:padding="16dp"
            android:orientation="vertical"
            >

            <EditText
                android:id="@+id/edtInteressado"
                style="@style/editTextStyle"
                android:layout_marginTop="16dp"
                android:hint="@string/edt_interessado_hint"
                android:drawableRight="@drawable/ic_plus_black_24dp"
                />

           <RadioGroup
               android:id="@+id/rdg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rdbInteressado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_interessado" />

                <RadioButton
                    android:id="@+id/rdbCrianca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_crianca" />

            </RadioGroup>
        </LinearLayout>

        <ListView
            android:id="@+id/lstInteressados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <include
        android:id="@+id/incTlbAgendar"
        layout="@layout/toolbar_bottom"/>
</LinearLayout>
